# Inkwatch

./: Cargo.toml  README.md
src/: args.rs  error.rs  main.rs  walk_dirs.rs  which.rs
test/: .2.pdf_tex  .рисунок-1.pdf_tex
test/test2/: .2 (Копия).pdf_tex  .2.pdf_tex
