[package]
name = "inkfigd"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
derive_more = {version = "2.0.1", features = ["from"]}
log = "0.4.27"
notify = "8.1.0"
which = "8.0.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
